src/test/deca/context/invalid/method-sameNameAsSuperField.context
method-sameNameAsSuperField.deca:5:
